@@ -167,7 +167,7 @@ sub setEnginePermissions
 	# eg. /usr/sbin/maillogconvert.pl
 	$rs = setRights(
 		$self->{'config'}->{'CMD_PFLOGSUM'},
-		'user' => $rootUName, 'group' => $rootGName, 'mode' => 0750
+		{ 'user' => $rootUName, 'group' => $rootGName, 'mode' => 0750 }
 	);
 
 	$self->{'hooksManager'}->trigger('afterMtaSetEnginePermissions');
